argo/apps/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: tools
  labels:
    app.kubernetes.io/name: pihole
  annotations:
    gethomepage.dev/description: Dynamically Detected pihole
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: pi-hole-unbound.png
    gethomepage.dev/name: Pihole
spec:
  rules:
    - host: "pihole.lan"
      http:
        paths:
          - path: "/admin"
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  number: 80
